plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'nu.studer.jooq' version '8.2'
	id 'org.liquibase.gradle' version '2.2.0'
}

group = 'org.ipredencao'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jooq'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.jooq:jooq:3.19.7'
	implementation 'org.liquibase:liquibase-core:4.27.0'
	implementation 'org.postgresql:postgresql:42.7.3'
	jooqGenerator 'org.postgresql:postgresql:42.7.3'
	implementation 'joda-time:joda-time:2.14.0'
	liquibaseRuntime 'org.liquibase:liquibase-core:4.27.0'
	liquibaseRuntime 'org.postgresql:postgresql:42.7.3'
	liquibaseRuntime 'info.picocli:picocli:4.7.5'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.681'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.15.2'
}

tasks.named('test') {
	useJUnitPlatform()
}

jooq {
	version = '3.19.7'
	edition = 'OSS'
	configurations {
		main {
			generateSchemaSourceOnCompilation = true
			generationTool {
				jdbc {
					driver = 'org.postgresql.Driver'
					url = 'jdbc:postgresql://localhost:54329/ipredencao_manager'
					user = 'ipredencao_manager'
					password = 'ipredencao_manager'
				}
				generator {
					name = 'org.jooq.codegen.DefaultGenerator'
					database {
						name = 'org.jooq.meta.postgres.PostgresDatabase'
						inputSchema = 'public'
					}
					target {
						packageName = 'org.ipredencao.ipredencao_manager.jooq'
						directory = 'target/generated-sources/jooq'
					}
				}
			}
		}
	}
}

liquibase {
	activities {
		main {
			changelogFile 'src/main/resources/db/changelog/db.changelog-master.xml'
			url 'jdbc:postgresql://localhost:54329/ipredencao_manager'
			username 'ipredencao_manager'
			password 'ipredencao_manager'
		}
	}
	runList = 'main'
}

tasks.register('composeUp', Exec) {
	// Coloquei /usr/local/bin/docker pois docker não estava acessível no PATH após mudar nome de usuário 
	commandLine '/usr/local/bin/docker', 'compose', 'up', '-d'
}

tasks.register('waitForDbHealthy', Exec) {
	commandLine 'sh', '-c', '''
		until [ "$(docker inspect -f '{{.State.Health.Status}}' db)" = "healthy" ]; do
		  echo "Waiting for DB to be ready (status: $(docker inspect -f '{{.State.Health.Status}}' db))...";
		  sleep 2;
		done
	'''
}

tasks.named('update') {
	dependsOn composeUp
	dependsOn waitForDbHealthy
}

tasks.named('generateJooq') {
	dependsOn 'update'
}

tasks.named('build') {
	dependsOn 'generateJooq'
}
